test/scc/expr/semantic-errors/049.t
void test()
{
    void* a;
    1.0 + a;
}